--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 --line: #F5F5F5;
 --bold: 25px;
 --small: 12px;
+--white: #fff;
 }
 *{
   margin: 0;
@@ -13,4 +14,13 @@ box-sizing: border-box;
 }
 nav{
   background: var(--red);
+  padding-block: 15px;
+}
+nav a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white);
+  text-decoration: none;
+  gap: 10px;
 }
