--- a/src/index.css
+++ b/src/index.css
@@ -24,15 +24,23 @@ nav a{
   text-decoration: none;
   gap: 10px;
 }
-.card{
-  display: flex;
-  align-items: center;
-  justify-content:space-between;
-}
 .card-container{
   width: 80%;
   margin: 30px auto;
 }
+.card{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  gap: 25px;
+  font-size: var(--small);
+}
+
 .card-location{
   display: flex;
+}
+.card-location div{
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
 }
