--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   margin: 0;
   padding: 0;
 box-sizing: border-box;
+color: var(--primary);
 }
 nav{
   background: var(--red);
@@ -38,9 +39,16 @@ nav a{
 
 .card-location{
   display: flex;
+  gap: 15px;
 }
 .card-location div{
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
+  display: inherit;
+  align-items: center;
+gap: 4px;
+font-size: 11px;
+font-weight: 700;
+}
+.card-title{
+  font-size: var(--bold);
+  font-weight: 700;
 }
